syntax = "proto3";

package test;

option go_package = "github.com/shaban/ffire/testdata/proto;testproto";

message RecordList {
  repeated Record records = 1;
}

message Record {
  string required = 1;
  optional string optional_str = 2;
  optional int32 optional_int = 3;
  optional bool optional_bool = 4;
}
